--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,30 +1,14 @@
-name: Docker Image CI/CD
+# Use an official Python runtime as a parent image
+FROM python:3.9-slim
 
-on:
-  push:
-    branches:
-      - master  # or 'main' if your branch is named main
+# Set the working directory in the container
+WORKDIR /app
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# Copy the rest of the application code into the container
+COPY . .
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+# Make port 5000 available to the world outside this container
+EXPOSE 5000
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: talha002/docker_practice:latest  # Update with your Docker Hub repository name and tag
+# Run the application
+CMD ["python", "main.py"]
