--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,14 +1,30 @@
-# Use an official Python runtime as a parent image
-FROM python:3.9-slim
+name: Docker Image CI/CD
 
-# Set the working directory in the container
-WORKDIR /app
+on:
+  push:
+    branches:
+      - master  # or 'main' if your branch is named main
 
-# Copy the rest of the application code into the container
-COPY . .
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-# Make port 5000 available to the world outside this container
-EXPOSE 5000
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-# Run the application
-CMD ["python", "main.py"]
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: talha002/docker_practice:latest  # Update with your Docker Hub repository name and tag
